--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="row main-container font1">
     <div class="d-grid gap-2 col-lg-12 mx-auto py-2">
         <div id="educacion" class="card-header bg-dark py-3 blockquote">
-            <h2 class="text-light text-uppercase card-title"><i class="fas fa-graduation-cap px-2"></i>Educación</h2>
+            <h2 class="text-light text-uppercase card-title"><i class="fas fa-graduation-cap px-2"></i>Educacion</h2>
         </div>
         <div class="text-center py-2">
             <button type="button" class="btn btn-success" (click)="onOpenModal('agregar')">
