--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -9,16 +9,16 @@
         <div class="text-center">
 
           <!--Linkedin -->
-          <a href="#" class="px-2">
+          <a class="px-2" href="https://www.linkedin.com/in/marianela-gaia" target="_blank">
             <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
           </a>
-          <!--Instagram-->
+          <!--Instagram
           <a class="px-2">
             <i href="#" class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-          </a>
+          </a>-->
           <!--Github-->
-          <a class="px-2">
-            <i href="#" class="fab fa-github fa-lg white-text fa-2x"></i>
+          <a class="px-2" href="https://github.com/m-gaia" target="_blank">
+            <i class="fab fa-github fa-lg white-text fa-2x"></i>
           </a>
         </div>
       </div>
