--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -42,15 +42,15 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-1x"></i></a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/marianela-gaia" target="_blank"><i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-1x"></i></a>
                     </li>
-                    <li class="nav-item">
+<!--                   <li class="nav-item">
                         <a class="nav-link" href="#"><i href="#" class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-1x"></i></a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i href="#" class="fab fa-github fa-lg white-text fa-1x"></i></a>
+                        <a class="nav-link" href="https://github.com/m-gaia" target="_blank"><i class="fab fa-github fa-lg white-text fa-1x"></i></a>
                     </li>
-                    <button
+<!--                   <button
                     type="button"
                     class="btn btn-sm btn-outline-dark bg-secondary text-white py-1 my-1 mx-2 rounded-pill border-2 text-uppercase"
                     data-bs-toggle="modal"
@@ -58,7 +58,7 @@
                     data-bs-whatever="@getbootstrap"
                     >
                     <strong>LOGIN</strong>
-                    </button>
+                    </button> -->  
                 </ul>
             </div>
         </div>
