--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -1,6 +1,6 @@
 
 <div id="main-container">
-    <div *ngIf="usuario">
+<!-- <div *ngIf="usuario">-->   
         <div class="container-fluid">
             <div class="row" >
                 <div class="col-12 px-0">
@@ -10,8 +10,13 @@
                             alt="banner"
                             class="d-inline-block img-fluid w-100"
                         />
-                        <div class="pt-1">
-                            <a 
+<!--                        <div class="px-1 pt-1">
+                            <button type="button" class="btn btn-success" (click)="onOpenModal('agregar')">
+                                <a class="nav-link text-light">
+                                    + Añadir Info <span class="sr-only">(current)</span>
+                                </a>
+                            </button>
+                            <a *ngIf="usuario"
                             (click)="onOpenModal('actualizar', usuario)"
                             class="btn btn-primary tooltips mx-2 right-btn float-end"
                             data-placement="top"
@@ -19,22 +24,24 @@
                             data-original-title="Actualizar"
                             ><i class="fas fa-edit"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container card border-light py-3 mb-3 font1" >
+<!-- *ngIf="usuario" -->
+        <div class="container card border-light py-3 mb-3 font1">
             <div class="row">
                 <div class="col-12">
                     <div
                     class="col-lg-12 col-md-12 position-absolute top-0 start-50 translate-middle"
                     >
                         <img
-                            src="{{usuario.img}}"
+                            
+                            src="https://lh3.googleusercontent.com/a-/AFdZucp3vup8A9eRIZjrJ_n_Uk03RudV8S0StnGi4El9KA=s288-p-rw-no"
                             alt="logo"
-                            width="140"
-                            height="150"
+                            width="200"
+                            height="200"
                             class="d-inline-block rounded-circle superponer mx-3 mb-5"
                         />
                     </div>
@@ -42,26 +49,27 @@
                         <div class="row align-items-center">
                             <div class="col-10">
                                 <h1 class="fw-light">
-                                    <strong>{{usuario.nombre}} {{usuario.apellido}}</strong>
+                                    <strong>Marianela Gaia</strong>
                                 </h1>
                                 <h2 class="lead fw-light text-muted py-2">
-                                    {{usuario.titulo}}
+                                    Full Stack Developer Junior
                                 </h2>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="pt-3 row card text-muted">
+                <div class="pt-5 row card text-muted">
                     <div class="col-lg-12 align-items-center">
-                        <h5 class="text-center">{{usuario.descripcion}}</h5>
+                        <h5 class="text-center">Learning #yoprogramo - Argentina Programa, Subsecretaria de Economía del Conocimiento — Data Intelligence / Universidad Nacional de Cuyo. Análisis de Datos y Gestión de Siniestros en Aseguradora de referencia en el mercado.
+                        </h5>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+<!--</div> ->
 
-<!-- Modal Editar Usuario -->
+<!-- Modal Editar Usuario 
 
 <div 
     class="modal fade" 
@@ -112,7 +120,7 @@
                         >
                     </div>
                     <div class="form-group my-2">
-                        <label for="titulo">Titulo</label>
+                        <label for="titulo">Nombre</label>
                         <input 
                         type="text" 
                         ngModel="{{actualizarUsuario?.titulo}} " 
@@ -169,7 +177,7 @@
                     <div class="modal-footer">
                         <button 
                         type="button"  
-                        id="add-header-form" 
+                        id="add-user-form" 
                         class="btn btn-secondary" 
                         data-dismiss="modal">
                             Cerrar
@@ -185,4 +193,108 @@
             </div>
         </div>
     </div>
-</div> 
+</div> -->
+
+<!-- Modal Añadir Usuario 
+
+<div 
+    class="modal fade" 
+    id="agregarUsuarioModal" 
+    tabindex="-1" 
+    role="dialog" 
+    aria-labelledby="agregarUsuarioModalLabel" 
+    aria-hidden="true">
+
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="agregarUsuarioModalLabel">+ Añadir</h5>
+            </div>
+            <div class="modal-body font1">
+                <form #addForm="ngForm" (ngSubmit)="onAddUsuario(addForm)">
+                    <div class="form-group my-2">
+                        <label for="apellido">Apellido</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="apellido" 
+                        class="form-control" 
+                        id="apellido" 
+                        placeholder="Apellido" 
+                        required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="nombre">Nombre</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="nombre" 
+                        class="form-control" 
+                        id="nombre" 
+                        placeholder="Nombre" 
+                        required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="fechaNac">Fecha de Nacimiento</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="fechaNac" 
+                        class="form-control" 
+                        id="fechaNac" 
+                        placeholder="Año (YYYY)" 
+                        required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="telefono">Teléfono</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="telefono" 
+                        class="form-control" 
+                        id="telefono" 
+                        placeholder="261" 
+                        required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="descripcion">Descripción</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="descripcion" 
+                        class="form-control" 
+                        id="descripcion" 
+                        placeholder="Descripción" 
+                        required>
+                    </div>
+                    <div class="form-group my-2">
+                        <label for="imgEdu">URL Imágen</label>
+                        <input 
+                        type="text" 
+                        ngModel 
+                        name="img" 
+                        class="form-control" 
+                        id="img" 
+                        placeholder="Img JPGE - PNG" 
+                        required>
+                    </div>
+                    <div class="modal-footer">
+                        <button 
+                        type="button" 
+                        id="add-education-form" 
+                        class="btn btn-secondary" 
+                        data-dismiss="modal">
+                            Cerrar
+                        </button>
+                        <button 
+                        [disabled]="addForm.invalid" 
+                        type="submit" 
+                        class="btn btn-primary"> 
+                            Guardar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div> -->
