--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -27,7 +27,7 @@
                         <p class="card-text"><small class="text-muted">{{proyecto.anioProy}}</small></p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="card-link text-decoration-none"><small><i class="fab fa-github fa-lg fa-1.5x mx-1"></i>{{proyecto.urlProy}}</small></a>
+                        <a href="{{proyecto.urlProy}}" target="_blank" class="card-link text-decoration-none"><small><i class="fab fa-github fa-lg fa-1.5x mx-1"></i>{{proyecto.urlProy}}</small></a>
                     </div>
                 </div>
                 <div class="col text-center">
