--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -33,7 +33,7 @@
                 <div class="col text-center">
                     <a 
                     (click)="onOpenModal('actualizar', proyecto)"
-                    class="btn btn-primary tooltips mx-2"
+                    class="btn btn-primary tooltips m-2"
                     data-placement="top"
                     data-toggle="tooltip"
                     data-original-title="Actualizar"
@@ -41,7 +41,7 @@
                     </a>
                     <a 
                     (click)="onOpenModal('eliminar', proyecto)"
-                    class="btn btn-secondary tooltips mx-2"
+                    class="btn btn-secondary tooltips m-2"
                     data-placement="top"
                     data-toggle="tooltip"
                     data-original-title="Eliminar"
