--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -6,7 +6,7 @@
         <div class="text-center py-2">
             <button type="button" class="btn btn-success" (click)="onOpenModal('agregar')">
                 <a class="nav-link text-light">
-                    + Añadir <span class="sr-only">(current)</span>
+                    + Añadir<span class="sr-only">(current)</span>
                 </a>
             </button>
         </div>
@@ -16,7 +16,7 @@
   <div *ngFor="let educacion of educaciones" class="col-lg-12 py-2">
     <div class="container card rounded-start py-2 font1">
         <div class="row align-items-center" >
-            <div class="col-12 mb-3">
+            <div class="col-12 mb-3 img-fluid">
                 <img src="{{educacion.imgEdu}}"  alt="" width="200">
             </div>
             <div class="col">
@@ -28,7 +28,7 @@
             <div class="col text-center">
                 <a 
                 (click)="onOpenModal('actualizar', educacion)"
-                class="btn btn-primary tooltips mx-2"
+                class="btn btn-primary tooltips m-2"
                 data-placement="top"
                 data-toggle="tooltip"
                 data-original-title="Actualizar"
@@ -36,7 +36,7 @@
                 </a>
                 <a 
                 (click)="onOpenModal('eliminar', educacion)"
-                class="btn btn-secondary tooltips mx-2"
+                class="btn btn-secondary tooltips m-2"
                 data-placement="top"
                 data-toggle="tooltip"
                 data-original-title="Eliminar"
