--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -37,16 +37,15 @@
                     class="col-lg-12 col-md-12 position-absolute top-0 start-50 translate-middle"
                     >
                         <img
-                            
                             src="https://lh3.googleusercontent.com/a-/AFdZucp3vup8A9eRIZjrJ_n_Uk03RudV8S0StnGi4El9KA=s288-p-rw-no"
                             alt="logo"
                             width="200"
                             height="200"
-                            class="d-inline-block rounded-circle superponer mx-3 mb-5"
+                            class="d-inline-block img-fluid rounded-circle superponer mx-3 mb-5 d-none d-lg-block"
                         />
                     </div>
                     <div class="col-lg-6 col-md-6 py-2 mx-auto text-center">
-                        <div class="row align-items-center">
+                        <div class="row justify-items-center">
                             <div class="col-10">
                                 <h1 class="fw-light">
                                     <strong>Marianela Gaia</strong>
