--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -18,7 +18,7 @@
         <div class="container card rounded-start py-2 font1">
             <div class="row align-items-center">
                 <div class="col">
-                    <img class="w-100 rounded" src="{{proyecto.imgProy}}"  alt="logo" width="50" height="200">
+                    <img id="imgproy" class="w-100 rounded" src="{{proyecto.imgProy}}"  alt="logo" width="50" height="200">
                 </div>
                 <div class="col">
                     <div class="card-body">
