--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -8,7 +8,7 @@
                         <img
                             src="assets/images/banner.png"
                             alt="banner"
-                            class="d-inline-block img-fluid w-100"
+                            class="d-inline-block img-fluid w-100 d-none d-lg-block"
                         />
 <!--                        <div class="px-1 pt-1">
                             <button type="button" class="btn btn-success" (click)="onOpenModal('agregar')">
@@ -46,11 +46,11 @@
                     </div>
                     <div class="col-lg-6 col-md-6 py-2 mx-auto text-center">
                         <div class="row justify-items-center">
-                            <div class="col-10">
-                                <h1 class="fw-light">
+                            <div class="col-10" id=textperfil>
+                                <h1 class="fw-light tex-center">
                                     <strong>Marianela Gaia</strong>
                                 </h1>
-                                <h2 class="lead fw-light text-muted py-2">
+                                <h2 class="lead fw-light text-muted py-2 tex-center">
                                     Full Stack Developer Junior
                                 </h2>
                             </div>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="pt-5 row card text-muted">
-                    <div class="col-lg-12 align-items-center">
+                    <div class="col">
                         <h5 class="text-center">Learning #yoprogramo - Argentina Programa, Subsecretaria de Economía del Conocimiento — Data Intelligence / Universidad Nacional de Cuyo. Análisis de Datos y Gestión de Siniestros en Aseguradora de referencia en el mercado.
                         </h5>
                     </div>
