--- a/src/app/componentes/encabezado/encabezado.component.html
+++ b/src/app/componentes/encabezado/encabezado.component.html
@@ -6,7 +6,7 @@
                 <div class="col-12 px-0">
                     <div>
                         <img
-                            src="assets/images/banner.png"
+                            src="assets/images/Geometrico.png"
                             alt="banner"
                             class="d-inline-block img-fluid w-100 d-none d-lg-block"
                         />
@@ -37,7 +37,7 @@
                     class="col-lg-12 col-md-12 position-absolute top-0 start-50 translate-middle"
                     >
                         <img
-                            src="https://lh3.googleusercontent.com/a-/AFdZucp3vup8A9eRIZjrJ_n_Uk03RudV8S0StnGi4El9KA=s288-p-rw-no"
+                            src="https://lh3.googleusercontent.com/a-/AFdZucov7OJB0WYG-2BI98P5niZVBtbE_tMg8zZ6qC68nQ=s288-p-rw-no"
                             alt="logo"
                             width="200"
                             height="200"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="pt-5 row card text-muted">
                     <div class="col">
-                        <h5 class="text-center">Learning #yoprogramo - Argentina Programa, Subsecretaria de Economía del Conocimiento — Data Intelligence / Universidad Nacional de Cuyo. Análisis de Datos y Gestión de Siniestros en Aseguradora de referencia en el mercado.
+                        <h5 id="texto" class="text-center">Learning #yoprogramo - Argentina Programa, Subsecretaria de Economía del Conocimiento — Data Intelligence / Universidad Nacional de Cuyo. Análisis de Datos y Gestión de Siniestros en Aseguradora de referencia en el mercado.
                         </h5>
                     </div>
                 </div>
