--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -1,7 +1,7 @@
-@media screen and (max-width: 400px) { 
+@media screen and (max-width: 576px) { 
     #imgproy {
-        height: auto;
-        width: auto;
+        height: 100%;
+        width: 100%;
     }
     
 }
